<resources>
    <string name="app_name">Chatter</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="sign_in">SIGN IN</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="display_name">Display name</string>
    <string name="phone">Phone</string>
    <string name="select_country">Select country</string>
    <string name="open_camera">Open camera</string>
    <string name="open_gallery">Open gallery</string>
    <string name="next">Next</string>
    <string name="birthday">Birthday</string>
    <string name="register">Register</string>
    <string name="photo_failed_to_upload">Photo failed to upload</string>
    <string name="registration_was_not_successful">Registration was not successful</string>
    <string name="registration_was_successful">Registration was successful</string>
    <string name="login_failed">Login failed</string>
    <string name="you_have_successfully_logged_in">You have successfully logged in</string>
    <string name="chats">Chats</string>
    <string name="new_chat">New Chat</string>
    <string name="the_connection_to_the_server_was_lost">The connection to the server was lost</string>
    <string name="search">Search</string>
    <string name="send_a_friend_request">Send a friend request</string>
    <string name="confirm">Confirm</string>
    <string name="the_request_has_been_sent">The request has been sent</string>
    <string name="the_request_was_sent_successfully">The request was sent successfully</string>
    <string name="the_request_could_not_be_sent">The request could not be sent</string>
    <string name="the_request_was_removed">The request was removed</string>
    <string name="the_request_was_accepted">The request was accepted</string>
    <string name="no_message_available">No message available</string>
    <string name="we_couldnt_make_the_conversation">We couldn\'t make the conversation</string>
    <string name="the_message_was_not_sent">The message was not sent.</string>
    <string name="view_profile">View profile</string>
    <string name="the_request_was_not_refused">The request was not refused</string>
    <string name="user_removed_sucessfully">User removed successfully</string>
    <string name="message">Message</string>
    <string name="friends">Friends</string>
    <string name="request">Request</string>
    <string name="users">Users</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="full_name_">Full name:</string>
    <string name="display_name_">Display name:</string>
    <string name="phone_">Phone:</string>
    <string name="country_">Country:</string>
</resources>