<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".activity.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="184dp"
            android:layout_height="184dp"
            android:src="@drawable/icon_dark_transparent_small"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/loginButton"
            style="@style/Button.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:theme="@style/Button.Default" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Button.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:theme="@style/Button.Outline" />

    </LinearLayout>

    <TextView
        android:id="@+id/rightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="#75FFFFFF"
        android:textSize="12sp" />

</LinearLayout>