<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragment.UserBottomInfoFragment">

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="6dp"
        android:background="@drawable/bottom_sheet_line_control" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="6dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/displayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <Space
            android:layout_width="6dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/displayNameCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#1982"
            android:textSize="10sp"
            tools:ignore="HardcodedText,SmallSp" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/sendAFriendRequestButton"
        style="@style/Button.Outline.LightBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_a_friend_request"
        android:textAllCaps="false"
        android:theme="@style/Button.Outline.LightBackground" />

</LinearLayout>